--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
 
     <div class="jumbotron">
       <div class="container">
-        <h1>Welcome to the AWS Feature Roll Test</h1>
+        <h1>Welcome to the AWS Feature Roll</h1>
         <p>There are lot of services and features being released every week on the AWS platform. Keeping track about what's happening
 	  can be challenging sometimes. Querying all feature announcements or creating a ready-to-go slide deck is now as simple as</p>
 	<p>
